# prism

./: .env.example  .gitignore  PUBLISH.md  README.md  prism.code-workspace  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
config/: experiment_log.jsonl  settings.py
docs/: CONCEPTS.md  DECISIONS.md
notebooks/: 01_data_pipeline.ipynb  02_baseline_models.ipynb  03_bayesian_online_model.ipynb  04_market_interface.ipynb  05_alpha_backtest.ipynb  06_findings_summary.ipynb
research/: findings.md
scripts/: build_notebooks.py  compute_edges.py  export_notebooks.sh  ingest_markets.py  ingest_nfl_only.py  ingest_sports.py  phase1_checkpoint.py  phase2_checkpoint.py  phase3_checkpoint.py  phase4_checkpoint.py  phase5_checkpoint.py  reproduce_findings.py  run_backtest.py
src/: __init__.py
src/backtest/: __init__.py  engine.py  metrics.py  sizing.py
src/data/: __init__.py  base.py  database.py  kalshi.py  mapping.py  nba.py  nfl.py  polymarket.py
src/market/: __init__.py  adverse_selection.py  edge.py  interface.py
src/models/: __init__.py  base.py  bayesian_online.py  bradley_terry.py  calibration.py  inplay_xgb.py  margin_model.py
src/utils/: logging.py  pandas_typing.py  validation.py
tests/: conftest.py  test_utils.py
tests/test_backtest/: conftest.py  test_engine.py  test_metrics.py  test_sizing.py
tests/test_data/: test_database.py  test_kalshi.py  test_mapping.py  test_nba.py  test_nfl.py  test_nfl_load.py  test_polymarket.py
tests/test_market/: conftest.py  test_adverse_selection.py  test_edge.py  test_interface.py
tests/test_models/: conftest.py  test_base.py  test_bayesian_online.py  test_bradley_terry.py  test_calibration.py  test_inplay_xgb.py  test_margin_model.py
