[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prism"
version = "0.1.0"
description = "Prediction & Research Infrastructure for Sports Markets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "nfl_data_py>=0.3.0",
    "nba_api>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.0.0",
    "requests>=2.31.0",
    "cryptography>=42.0.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "shap>=0.44.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pandas-stubs>=2.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "types-requests>=2.31.0",
    "scipy-stubs>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
packages = ["src", "config"]

[[tool.mypy.overrides]]
module = [
    "nfl_data_py.*",
    "nba_api.*",
    "xgboost.*",
    "shap.*",
    "matplotlib.*",
    "seaborn.*",
    "sklearn.*",
    "statsmodels.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
precision = 1

[tool.coverage.paths]
source = ["src"]

# Backtest money logic: aim for full coverage (enforced in CI via separate run)
